--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,19 +18,18 @@
             android:layout_height="20dp"
             android:layout_marginStart="20dp"
             android:layout_marginTop="20dp"
-            android:text="TextView"
+            android:text="@string/name_prompt"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <EditText
-            android:id="@+id/editText16"
+            android:id="@+id/nameEditText"
             android:layout_width="wrap_content"
             android:layout_height="20dp"
             android:layout_marginTop="20dp"
             android:layout_marginEnd="119dp"
             android:ems="10"
             android:inputType="textPersonName"
-            android:text="Name"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/nameTextView"
             app:layout_constraintTop_toTopOf="parent" />
@@ -40,53 +39,53 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
-            android:text="TextView"
+            android:text="@string/email_prompt"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/nameTextView" />
 
         <EditText
-            android:id="@+id/editText17"
+            android:id="@+id/emailEditText"
             android:layout_width="wrap_content"
             android:layout_height="20dp"
             android:ems="10"
             android:inputType="textEmailAddress"
             app:layout_constraintStart_toEndOf="@+id/emailTextView"
-            app:layout_constraintTop_toBottomOf="@+id/editText16" />
+            app:layout_constraintTop_toBottomOf="@+id/nameEditText" />
 
         <TextView
-            android:id="@+id/textView24"
+            android:id="@+id/passwordTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
-            android:text="TextView"
+            android:text="@string/password_prompt"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/editText17" />
+            app:layout_constraintTop_toBottomOf="@+id/emailEditText" />
 
         <EditText
-            android:id="@+id/editText18"
+            android:id="@+id/passwordEditText"
             android:layout_width="wrap_content"
             android:layout_height="20dp"
             android:ems="10"
             android:inputType="textPassword"
-            app:layout_constraintStart_toEndOf="@+id/textView24"
-            app:layout_constraintTop_toBottomOf="@+id/editText17" />
+            app:layout_constraintStart_toEndOf="@+id/passwordTextView"
+            app:layout_constraintTop_toBottomOf="@+id/emailEditText" />
 
         <TextView
-            android:id="@+id/textView25"
+            android:id="@+id/confirmationTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
-            android:text="TextView"
+            android:text="@string/confirmation_prompt"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/editText18" />
+            app:layout_constraintTop_toBottomOf="@+id/passwordEditText" />
 
         <EditText
-            android:id="@+id/editText19"
+            android:id="@+id/confirmationEditText"
             android:layout_width="wrap_content"
             android:layout_height="20dp"
             android:ems="10"
             android:inputType="textPassword"
-            app:layout_constraintStart_toEndOf="@+id/textView25"
-            app:layout_constraintTop_toBottomOf="@+id/editText18" />
+            app:layout_constraintStart_toEndOf="@+id/confirmationTextView"
+            app:layout_constraintTop_toBottomOf="@+id/passwordEditText" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
